--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,12 @@ maven_group=org.waste.of.time
 loom_version=1.3-SNAPSHOT
 minecraft_version=1.20.1
 yarn_mappings=1.20.1+build.10
-loader_version=0.14.22
-fabric_kotlin_version=1.10.8+kotlin.1.9.0
-fabric_api_version=0.87.0+1.20.1
+fabric_kotlin_version=1.10.10+kotlin.1.9.10
 mod_version=1.0.0
-
-org.gradle.jvmargs=-Xmx4000m
+org.gradle.jvmargs=-Xmx2048M
+enabled_platforms=fabric,forge
+architectury_version=9.0.8
+fabric_loader_version=0.14.21
+fabric_api_version=0.87.0+1.20.1
+forge_version=1.20.1-47.1.0
+kyori_text_minimessage_version=4.14.0
