--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 kotlin.code.style=official
-archives_base_name=worldtools
+archives_base_name=WorldTools
 maven_group=org.waste.of.time
 loom_version=1.3-SNAPSHOT
 minecraft_version=1.20.1
@@ -13,3 +13,5 @@ fabric_loader_version=0.14.21
 fabric_api_version=0.87.0+1.20.1
 forge_version=1.20.1-47.1.0
 kyori_text_minimessage_version=4.14.0
+libgui_version=8.0.2+1.20
+kotlin_forge_version=4.4.0
