--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,32 +1,41 @@
-name: build
-on: [ pull_request, push ]
+name: WorldTools Build
+
+on:
+  pull_request:
+  push:
+    branches:
+      - "master"
 
 jobs:
   build:
-    strategy:
-      matrix:
-        # Use these Java versions
-        java: [ 17 ]
-        # and run on both Linux and Windows
-        os: [ ubuntu-20.04, windows-latest ]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
-      - name: checkout repository
-        uses: actions/checkout@v2
-      - name: validate gradle wrapper
+      - name: Check out repository
+        uses: actions/checkout@v3
+
+      - name: Gradle Wrapper Verification
         uses: gradle/wrapper-validation-action@v1
-      - name: setup jdk ${{ matrix.java }}
-        uses: actions/setup-java@v1
+
+      - name: Setup JDK
+        uses: actions/setup-java@v3
         with:
-          java-version: ${{ matrix.java }}
-      - name: make gradle wrapper executable
-        if: ${{ runner.os != 'Windows' }}
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Elevate wrapper permissions
         run: chmod +x ./gradlew
-      - name: build
+
+      - name: Build Mod
         run: ./gradlew build
-      - name: capture build artifacts
-        if: ${{ runner.os == 'Linux' && matrix.java == '17' }} # Only upload artifacts built from latest java on one OS
-        uses: actions/upload-artifact@v2
+
+      - name: Upload Fabric Artifacts
+        uses: actions/upload-artifact@v3
         with:
-          name: Artifacts
-          path: build/libs/
+          name: WorldTools-fabric
+          path: fabric/build/libs/*.jar
+
+      - name: Upload Forge Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: WorldTools-forge
+          path: forge/build/libs/*.jar
