--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -33,3 +33,10 @@ mandatory = true
 versionRange = "[4,)"
 ordering = "AFTER"
 side = "CLIENT"
+
+[[dependencies.worldtools]]
+modId = "cloth_config"
+mandatory = true
+versionRange = "[11,)"
+ordering = "AFTER"
+side = "CLIENT"
