--- a/gradle.properties
+++ b/gradle.properties
@@ -8,8 +8,10 @@ mod_version=1.1.1
 minecraft_version=1.20.1
 enabled_platforms=fabric,forge
 architectury_version=9.1.12
-kyori_text_minimessage_version=4.14.0
-libgui_version=8.0.2+1.20
+mixinextras_version=0.3.2
+kyori_adventure_version=4.15.0
+cloth_config_version=11.1.106
+mod_menu_version=7.2.2
 
 # Fabric
 loom_version=1.4-SNAPSHOT
