--- a/.github/workflows/fabric-release.yml
+++ b/.github/workflows/fabric-release.yml
@@ -7,8 +7,6 @@ on:
 
 env:
   MINECRAFT_VERSION: "1.20.1"
-  FABRIC_API_VERSION: "0.91.0+1.20.1"
-  FABRIC_LANGUAGE_KOTLIN_VERSION: "1.10.16+kotlin.1.9.21"
 
 jobs:
   build:
@@ -63,5 +61,6 @@ jobs:
           game-versions: |
             ${{ env.MINECRAFT_VERSION }}
           dependencies: |
-            fabric-api@${{ env.FABRIC_API_VERSION }}(required){modrinth:P7dR8mSH}{curseforge:306612}
-            fabric-language-kotlin@{{ env.FABRIC_LANGUAGE_KOTLIN_VERSION }}(required){modrinth:Ha28R6CL}{curseforge:351264}
+            fabric-api(required){modrinth:P7dR8mSH}{curseforge:306612}
+            fabric-language-kotlin(required){modrinth:Ha28R6CL}{curseforge:351264}
+            cloth-config(required){modrinth:9s6osm5g}{curseforge:348521}
