--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -1,12 +1,12 @@
-name: Github Release
+name: 1.20.4 Github Release
 
 on:
   push:
     tags:
-      - '[0-9]+.[0-9]+.[0-9]+'
+      - '[0-9]+.[0-9]+.[0-9]+\+1.20.4'
 
 env:
-  MINECRAFT_VERSION: "1.20.1"
+  MINECRAFT_VERSION: "1.20.4"
 
 jobs:
   build:
