--- a/gradle.properties
+++ b/gradle.properties
@@ -9,11 +9,10 @@ minecraft_version=1.20.4
 enabled_platforms=fabric,forge
 architectury_version=11.0.11
 mixinextras_version=0.3.5
-kyori_adventure_version=4.15.0
 cloth_config_version=13.0.121
 mod_menu_version=9.0.0
 
-# Fabric
+# Fabric https://fabricmc.net/develop/
 fabric_loader_version=0.15.6
 yarn_mappings=1.20.4+build.3
 # todo: fabric-api update is blocked on architectury-loom supporting loom 1.5+ mixin remapping
