--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -1,9 +1,11 @@
 name: 1.20.4 Github Release
 
 on:
-  push:
-    tags:
-      - '[0-9]+.[0-9]+.[0-9]+\+1.20.4'
+  workflow_dispatch:
+  # DISABLED UNTIL REPO PERMS ARE FIXED
+#  push:
+#    tags:
+#      - '[0-9]+.[0-9]+.[0-9]+\+1.20.4'
 
 env:
   MINECRAFT_VERSION: "1.20.4"
