swap out changelog generator action
(cherry picked from commit 76fb5a764f13521595d2e1e6ebdbbb5e3227d54b)

--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -46,9 +46,9 @@ jobs:
 
       - name: Generate Changelog
         id: changelog
-        uses: metcalfc/changelog-generator@v4.1.0
-        with:
-          myToken: ${{ secrets.GITHUB_TOKEN }}
+        uses: mikepenz/release-changelog-builder-action@4.1.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Release
         uses: Kir-Antipov/mc-publish@v3.3
