--- a/.github/workflows/fabric-release.yml
+++ b/.github/workflows/fabric-release.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Generate Changelog
         id: changelog
-        uses: mikepenz/release-changelog-builder-action@4.1.1
+        uses: mikepenz/release-changelog-builder-action@v4.1.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
