update generated changelog formatting
(cherry picked from commit 6ace85f11e09fd922da704f4096fa6b316ac67c7)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,6 +49,11 @@ jobs:
         uses: mikepenz/release-changelog-builder-action@v4.1.1
         with:
           commitMode: true
+          configurationJson: |
+            {
+              "pr_template": "- #{{TITLE}} [#{{AUTHOR}}](#{{URL}})"
+            }
+
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
