--- a/gradle.properties
+++ b/gradle.properties
@@ -5,18 +5,18 @@ archives_base_name=WorldTools
 maven_group=org.waste.of.time
 mod_version=1.2.5
 
-minecraft_version=1.20.4
-enabled_platforms=fabric,forge
+minecraft_version=1.20.5
+enabled_platforms=fabric
 architectury_version=11.0.11
 mixinextras_version=0.3.5
-cloth_config_version=13.0.121
-mod_menu_version=9.0.0
+cloth_config_version=14.0.126
+mod_menu_version=10.0.0-beta.1
 
 # Fabric https://fabricmc.net/develop/
 fabric_loader_version=0.15.6
-yarn_mappings=1.20.4+build.3
-fabric_api_version=0.95.1+1.20.4
-fabric_kotlin_version=1.10.17+kotlin.1.9.22
+yarn_mappings=1.20.5+build.1
+fabric_api_version=0.97.5+1.20.5
+fabric_kotlin_version=1.10.19+kotlin.1.9.23
 
 # Forge
 forge_version=1.20.4-49.0.19
