Initial 1.21 Test Push

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,10 @@
-name: WorldTools Build
+name: WorldTools 1.21.0 Fork
 
 on:
   pull_request:
   push:
     branches:
-      - "master"
+      - "1.21.0"
 
 jobs:
   build:
@@ -19,7 +19,7 @@ jobs:
       - name: Setup JDK
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
 
       - name: Elevate wrapper permissions
