--- a/gradle.properties
+++ b/gradle.properties
@@ -5,19 +5,19 @@ archives_base_name=WorldTools
 maven_group=org.waste.of.time
 mod_version=1.2.5
 
-minecraft_version=1.20.1
-enabled_platforms=fabric,forge
-architectury_version=9.1.12
+minecraft_version=1.21
+enabled_platforms=fabric
+architectury_version=11.0.11
 mixinextras_version=0.3.5
-cloth_config_version=11.1.106
-mod_menu_version=7.2.2
+cloth_config_version=15.0.127
+mod_menu_version=11.0.0-beta.1
 
-# Fabric
-fabric_loader_version=0.15.2
-yarn_mappings=1.20.1+build.10
-fabric_api_version=0.91.0+1.20.1
-fabric_kotlin_version=1.10.17+kotlin.1.9.22
+# Fabric https://fabricmc.net/develop/
+fabric_loader_version=0.15.11
+yarn_mappings=1.21+build.1
+fabric_api_version=0.100.1+1.21
+fabric_kotlin_version=1.11.0+kotlin.2.0.0
 
 # Forge
-forge_version=1.20.1-47.2.17
+forge_version=1.20.4-49.0.19
 kotlin_forge_version=4.10.0
